--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/Users/annyapearl/Downloads/html5up-paradigm-shift/index.html"
+    "livePreview.defaultPreviewPath": "/Users/annyapearl/Documents/GitHub/annya.pearl/index.html"
 }
